--- a/Programming.csproj
+++ b/Programming.csproj
@@ -46,7 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\enum.cs" />
+    <Compile Include="Model\Enums\Colour.cs" />
+    <Compile Include="Model\Enums\Genre.cs" />
+    <Compile Include="Model\Enums\Season.cs" />
+    <Compile Include="Model\Enums\SmartphoneManufacturers.cs" />
+    <Compile Include="Model\Enums\StudyForm.cs" />
+    <Compile Include="Model\Enums\Weekday.cs" />
     <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
