--- a/Programming.csproj
+++ b/Programming.csproj
@@ -46,6 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Classes\Contact.cs" />
+    <Compile Include="Model\Classes\Film.cs" />
+    <Compile Include="Model\Classes\Flight.cs" />
+    <Compile Include="Model\Classes\Rectangle.cs" />
+    <Compile Include="Model\Classes\Song.cs" />
+    <Compile Include="Model\Classes\Subject.cs" />
+    <Compile Include="Model\Classes\Time.cs" />
     <Compile Include="Model\Enums\Colour.cs" />
     <Compile Include="Model\Enums\Genre.cs" />
     <Compile Include="Model\Enums\Season.cs" />
