--- a/Programming.csproj
+++ b/Programming.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Classes\Contact.cs" />
-    <Compile Include="Model\Classes\Film.cs" />
+    <Compile Include="Model\Classes\Movie.cs" />
     <Compile Include="Model\Classes\Flight.cs" />
     <Compile Include="Model\Classes\Rectangle.cs" />
     <Compile Include="Model\Classes\Song.cs" />
@@ -93,6 +93,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Resourses\icon.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
