--- a/Programming.csproj
+++ b/Programming.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Model\Classes\Time.cs" />
     <Compile Include="Model\Enums\Colour.cs" />
     <Compile Include="Model\Enums\Genre.cs" />
+    <Compile Include="Model\Enums\Mark.cs" />
     <Compile Include="Model\Enums\Season.cs" />
     <Compile Include="Model\Enums\SmartphoneManufacturers.cs" />
     <Compile Include="Model\Enums\StudyForm.cs" />
