--- a/ObjectOrientedPractics/ObjectOrientedPractics.csproj
+++ b/ObjectOrientedPractics/ObjectOrientedPractics.csproj
@@ -4,15 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8D335DC1-A933-41D9-8D37-E1DEF7AC4229}</ProjectGuid>
+    <ProjectGuid>{29A30578-A4DD-4DAD-94B1-66FF2ADD7019}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>MovieApp</RootNamespace>
-    <AssemblyName>MovieApp</AssemblyName>
+    <RootNamespace>ObjectOrientedPractics</RootNamespace>
+    <AssemblyName>ObjectOrientedPractics</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -25,6 +24,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -48,9 +48,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.13.0.2-beta1\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -64,20 +61,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Classes\FileManager.cs" />
-    <Compile Include="View\Controls\MovieEditorControl.cs">
+    <Compile Include="Model\Customer.cs" />
+    <Compile Include="Model\Item.cs" />
+    <Compile Include="Services\IdGenerator.cs" />
+    <Compile Include="Services\Validator.cs" />
+    <Compile Include="View\ColorManager.cs" />
+    <Compile Include="View\Controls\CustomerEditorControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\Controls\MovieEditorControl.Designer.cs">
-      <DependentUpon>MovieEditorControl.cs</DependentUpon>
+    <Compile Include="View\Controls\CustomerEditorControl.Designer.cs">
+      <DependentUpon>CustomerEditorControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\Controls\MovieListControl.cs">
+    <Compile Include="View\Controls\CustomerListControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\Controls\MovieListControl.Designer.cs">
-      <DependentUpon>MovieListControl.cs</DependentUpon>
+    <Compile Include="View\Controls\CustomerListControl.Designer.cs">
+      <DependentUpon>CustomerListControl.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Controls\UpdateType.cs" />
+    <Compile Include="View\Controls\ItemEditorControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\ItemEditorControl.Designer.cs">
+      <DependentUpon>ItemEditorControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\ItemListControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\ItemListControl.Designer.cs">
+      <DependentUpon>ItemListControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +99,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\Tabs\CustomersTab.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Tabs\CustomersTab.Designer.cs">
+      <DependentUpon>CustomersTab.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Tabs\ItemsTab.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Tabs\ItemsTab.Designer.cs">
+      <DependentUpon>ItemsTab.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -94,18 +119,28 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="View\Controls\MovieEditorControl.resx">
-      <DependentUpon>MovieEditorControl.cs</DependentUpon>
+    <EmbeddedResource Include="View\Controls\CustomerEditorControl.resx">
+      <DependentUpon>CustomerEditorControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\Controls\MovieListControl.resx">
-      <DependentUpon>MovieListControl.cs</DependentUpon>
+    <EmbeddedResource Include="View\Controls\CustomerListControl.resx">
+      <DependentUpon>CustomerListControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Controls\ItemEditorControl.resx">
+      <DependentUpon>ItemEditorControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Controls\ItemListControl.resx">
+      <DependentUpon>ItemListControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="packages.config" />
+    <EmbeddedResource Include="View\Tabs\CustomersTab.resx">
+      <DependentUpon>CustomersTab.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Tabs\ItemsTab.resx">
+      <DependentUpon>ItemsTab.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -118,23 +153,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Programming.csproj">
-      <Project>{785a6645-cd89-495f-9f6c-64ce7d5a4088}</Project>
-      <Name>Programming</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <None Include="Resources\rectangle_remove_24x24_uncolor.png" />
-    <None Include="Resources\rectangle_remove_24x24.png" />
-    <None Include="Resources\rectangle_edit_24x24_uncolor.png" />
-    <None Include="Resources\rectangle_edit_24x24.png" />
-    <None Include="Resources\rectangle_add_24x24_uncolor.png" />
-    <None Include="Resources\rectangle_add_24x24.png" />
-    <Content Include="Resource\rectangle_edit_24x24.png" />
-    <Content Include="Resource\rectangle_edit_24x24_uncolor.png" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.8">
