--- a/src/ObjectOrientedPractics/ObjectOrientedPractics.csproj
+++ b/src/ObjectOrientedPractics/ObjectOrientedPractics.csproj
@@ -112,6 +112,12 @@
     <Compile Include="View\Controls\AdressEditorControl.Designer.cs">
       <DependentUpon>AdressEditorControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\Controls\CartEditorControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\CartEditorControl.Designer.cs">
+      <DependentUpon>CartEditorControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Controls\CustomerEditorControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -123,6 +129,12 @@
     </Compile>
     <Compile Include="View\Controls\CustomerListControl.Designer.cs">
       <DependentUpon>CustomerListControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\CustomerSelectorControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\CustomerSelectorControl.Designer.cs">
+      <DependentUpon>CustomerSelectorControl.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Controls\UpdateType.cs" />
     <Compile Include="View\Controls\ItemEditorControl.cs">
@@ -145,6 +157,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\Tabs\CartsTab.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Tabs\CartsTab.Designer.cs">
+      <DependentUpon>CartsTab.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Tabs\CustomersTab.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -170,11 +188,17 @@
     <EmbeddedResource Include="View\Controls\AdressEditorControl.resx">
       <DependentUpon>AdressEditorControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\Controls\CartEditorControl.resx">
+      <DependentUpon>CartEditorControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Controls\CustomerEditorControl.resx">
       <DependentUpon>CustomerEditorControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Controls\CustomerListControl.resx">
       <DependentUpon>CustomerListControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Controls\CustomerSelectorControl.resx">
+      <DependentUpon>CustomerSelectorControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Controls\ItemEditorControl.resx">
       <DependentUpon>ItemEditorControl.cs</DependentUpon>
@@ -184,6 +208,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Tabs\CartsTab.resx">
+      <DependentUpon>CartsTab.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Tabs\CustomersTab.resx">
       <DependentUpon>CustomersTab.cs</DependentUpon>
