--- a/src/ObjectOrientedPractics/ObjectOrientedPractics.csproj
+++ b/src/ObjectOrientedPractics/ObjectOrientedPractics.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Model\Item.cs" />
     <Compile Include="Model\Order.cs" />
     <Compile Include="Model\OrderStatus.cs" />
+    <Compile Include="Model\PriorityOrder.cs" />
     <Compile Include="Model\Store.cs" />
     <Compile Include="Services\Factories\AdressFactory.cs" />
     <Compile Include="Services\Factories\OrderFactory.cs" />
