--- a/src/ObjectOrientedPractics/ObjectOrientedPractics.csproj
+++ b/src/ObjectOrientedPractics/ObjectOrientedPractics.csproj
@@ -152,6 +152,12 @@
       <DependentUpon>OrdersGridViewControl.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Controls\OrderView.cs" />
+    <Compile Include="View\Controls\PriorityOrderCreatorControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\PriorityOrderCreatorControl.Designer.cs">
+      <DependentUpon>PriorityOrderCreatorControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Controls\SortStatus.cs" />
     <Compile Include="View\Controls\UpdateType.cs" />
     <Compile Include="View\Controls\ItemEditorControl.cs">
@@ -198,6 +204,12 @@
     <Compile Include="View\Tabs\OrdersTab.Designer.cs">
       <DependentUpon>OrdersTab.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\Tabs\PriorityOrdersTab.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Tabs\PriorityOrdersTab.Designer.cs">
+      <DependentUpon>PriorityOrdersTab.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -235,6 +247,9 @@
     <EmbeddedResource Include="View\Controls\OrdersGridViewControl.resx">
       <DependentUpon>OrdersGridViewControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\Controls\PriorityOrderCreatorControl.resx">
+      <DependentUpon>PriorityOrderCreatorControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -249,6 +264,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\Tabs\OrdersTab.resx">
       <DependentUpon>OrdersTab.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Tabs\PriorityOrdersTab.resx">
+      <DependentUpon>PriorityOrdersTab.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
