--- a/src/ObjectOrientedPractics/ObjectOrientedPractics.csproj
+++ b/src/ObjectOrientedPractics/ObjectOrientedPractics.csproj
@@ -91,14 +91,15 @@
   <ItemGroup>
     <Compile Include="Model\Adress.cs" />
     <Compile Include="Model\Cart.cs" />
-    <Compile Include="Model\ItemCategory.cs" />
+    <Compile Include="Model\Discounts\IDiscount.cs" />
+    <Compile Include="Model\Enums\ItemCategory.cs" />
     <Compile Include="Model\Customer.cs" />
     <Compile Include="Model\Item.cs" />
-    <Compile Include="Model\Order.cs" />
-    <Compile Include="Model\OrderStatus.cs" />
-    <Compile Include="Model\PercentDiscount.cs" />
-    <Compile Include="Model\PointsDiscount.cs" />
-    <Compile Include="Model\PriorityOrder.cs" />
+    <Compile Include="Model\Orders\Order.cs" />
+    <Compile Include="Model\Enums\OrderStatus.cs" />
+    <Compile Include="Model\Discounts\PercentDiscount.cs" />
+    <Compile Include="Model\Discounts\PointsDiscount.cs" />
+    <Compile Include="Model\Orders\PriorityOrder.cs" />
     <Compile Include="Model\Store.cs" />
     <Compile Include="Services\Factories\AdressFactory.cs" />
     <Compile Include="Services\Factories\OrderFactory.cs" />
